ADD : Activity XML Code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Idus_Assignment</string>
+    <string name="application_title">Local Weather</string>
 </resources>
