--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Idus_Assignment</string>
     <string name="application_title">Local Weather</string>
+    <string name="text_tomorrow_weather">내일의 날씨</string>
+    <string name="text_local">지역</string>
+    <string name="text_today_weather">오늘의 날씨</string>
 </resources>
